Changed image pathing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="main__grid--container">
         <section class="nav">
-            <img class="nav--img" src="/images/logo.svg">
+            <img class="nav--img" src="images/logo.svg">
             <ul>
                 <li>
                     <a>Home</a>
